--- a/assets/landing/css/style.css
+++ b/assets/landing/css/style.css
@@ -243,8 +243,8 @@ a {
 
 .icon {
   margin: 50px 0;
-  height: 130px;
-  width: 130px;
+  height: 50px;
+  width: 50px;
   background: #661d47;
   border-radius: 50%;
   text-align: center;
@@ -252,7 +252,9 @@ a {
   justify-content: center;
   display: flex;
 }
-
+.icon img {
+  width: 30px;
+}
 @media only screen and (max-width: 750px) {
   /* .wrapper_holder3 {
     padding: unset;
@@ -269,7 +271,7 @@ a {
 }
 
 .footerHolder {
-  padding: 100px 50px;
+  padding: 50px 30px;
 }
 .store img {
   width: 150px;
@@ -288,6 +290,7 @@ a {
 }
 .footerlogo img {
   transition: 0.5s ease;
+  width: 100px;
 }
 .footerlogo img:hover {
   transform: scale(0.9);
